--- a/.gitignore
+++ b/.gitignore
@@ -49,7 +49,7 @@ po/*~
 rsconnect/
 
 # Locally-stored large data files: 
-data/raw/national
+data/raw/
 
 # Batch download logs: 
 code/download_handlers.log
